--- a/LDA_paper/document.tex
+++ b/LDA_paper/document.tex
@@ -9,19 +9,15 @@
 % \usepackage{varwidth}
 % \usepackage{array}
 % \usepackage{float}
-% \usepackage{amsmath}
 % \usepackage{pgfplotstable}
-% \usepackage[T1]{fontenc}
+\usepackage[T1]{fontenc}
 % \usepackage[compact]{titlesec}
 % \usepackage{authblk}
-% \usepackage[utf8]{inputenc}
-% \usepackage{bbm}
+\usepackage{bbm}
+
+\usepackage{amsthm}
 % \usepackage{amsmath}
-% \usepackage[utf8]{inputenc}
-% \usepackage[english]{babel}
-% \usepackage{amsthm}
-% \usepackage{amsmath}
-% \usepackage[utf8]{inputenc}
+\usepackage[utf8]{inputenc}
 % \usepackage[english]{babel}
 % \usepackage[nottoc]{tocbibind}
 % %\usepackage[style=authoryear,backend=biber]{biblatex}
@@ -207,19 +203,18 @@ In the sliding window model each node computes $S^i$ from the $L$ samples seen
 at node $i$, while $S_0^i$ (and hence $S_0$) is built from the last L samples before
 sync. 
 We denote the drift in the global covariance matrix
-\begin{equation*}
-\begin{split}
-\Delta & :=B-B_0 \\
-& = (S_0+\Delta_S - (p_0+\delta_p)(p_0+\delta_p)^T -
-(q_0+\delta_q)(q_0+\delta_q)^T) \\
-& \ - (S_0 - p_0p_0^T - q_0q_0^T) \\
-& = \delta_p\delta_p^T + \delta_q\delta_q^T + \Delta_S - p_0\delta_p^T -
-\delta_pp_0^T - q_0\delta_q^T - \delta_qq_0^T
-\end{split}
-\end{equation*}
+\begin{alignat*}{2}
+\Delta & := && B-B_0 \\
+& = && (S_0+\Delta_S - (p_0+\delta_p)(p_0+\delta_p)^T \\
+& && - (q_0+\delta_q)(q_0+\delta_q)^T) \\
+& && - (S_0 - p_0p_0^T - q_0q_0^T) \\
+& = && - \delta_p\delta_p^T - \delta_q\delta_q^T \\
+& && + \Delta_S - p_0\delta_p^T \\
+& && - \delta_pp_0^T - q_0\delta_q^T - \delta_qq_0^T
+\end{alignat*}
 we break $\Delta$ into its quadratic part
 \begin{equation*}
-M:=\delta_p\delta_p^T + \delta_q\delta_q^T, 
+M:= - \delta_p\delta_p^T - \delta_q\delta_q^T, 
 \end{equation*}
 and linear part
 \begin{equation*}
@@ -252,6 +247,41 @@ Where $||A||$ is the operator norm of the matrix A.
 \end{lemma}
 The proof of the lemma \ref{convexBound} quite technical, and
 the details are available in Appendix A.
+
+\subsection{Node wise Probabilistic Point of View }
+Let $TV \in {0,1}$ stand for the indicator for True
+Violation, then  
+\begin{equation*}
+P_{TV} := P(TV = 1),
+\end{equation*}
+and let $v_i \in {0,1}$ stand for the indicator for a local violation in the
+i'th node. The probability for True Positive (TP) and False Positive (FP) in a
+node is:
+\begin{alignat*}{1}
+& P_{TP} := P(v_i=1 | TV=1) \\
+& P_{FP} := P(v_i=1 | TV=0)
+\end{alignat*}
+Let $V$ be the random variable of the number of local violations
+\begin{equation*}
+V := \sum_{i=1}^k v_i,
+\end{equation*}
+\begin{alignat*}{1}
+& B_{TP} := P(V=v | TV=1) \propto Bin(k,P_{TP}) \\
+& B_{FP} := P(V=v | TV=0) \propto Bin(k,P_{TF})
+\end{alignat*}
+We would like to monitor the probability for TV, i.e. $P(TV=1|V=v)$. Using
+Bayes' rule we can derive
+\begin{alignat*}{1}
+& P(TV=1|V=v) \\
+& = \frac{P(V=v, TV=1)}{P(V=v)}\\
+& = \frac{P(V=v|TV=1)P(TV=1)}{P(V=v)} \\
+& = \frac{P_{TV}B_{TP}}{P_{TV}B_{TP} + (1-P_{TV})B_{FP}}
+\end{alignat*}
+
+If we assume $P_{TP}=1$, it is simplfied to:
+\begin{equation*}
+P(TV=1|V=v) = \frac{B_{TP}}{P_{TV}B_{TP} + (1-P_{TV})B_{FP}}
+\end{equation*}
 \section{EVALUATION}
 \subsection{Synthetic Datasets}
 
@@ -304,6 +334,7 @@ Is seen in Fig \ref{Noise}.
 	\label{Noise}
 	\end{figure}
 
+\subsection{Convex Bound Proof}
 
 \bibliographystyle{unsrt}
 \bibliography{bib}
@@ -355,7 +386,7 @@ We split the last addition into two parts:
 \end{split}
 \end{equation}
 If we assume that $||B_0^{-1}\Delta||\ \leq \ 1$, 
-then from the lemma \ref{lemma:newman} we get:
+then from lemma \ref{lemma:newman} we get:
 \begin{equation} \label{e1e2In}
 \begin{split}
 & E_1 \leq \frac{||B_0^{-1}\delta||}{1-||B_0^{-1}\Delta||} \\
@@ -375,14 +406,14 @@ get:
 & \leq R_0
 \end{split}
 \end{equation}
-Loosing the denominator:
+Losing the denominator:
 \begin{equation} \label{lostDenom}
 ||B_0^{-1}\delta|| + ||B_0^{-1}\Delta||||w_0||
 \leq R_0(1 -||B_0^{-1}\Delta||)
 \end{equation}
 From the triangle inequality we can rewrite:
 \begin{equation} \label{linQuad}
-||B_0^{-1}\Delta|| = ||B_0^{-1}L||+||B_0^{-1}M||
+||B_0^{-1}\Delta|| \leq ||B_0^{-1}L||+||B_0^{-1}M||
 \end{equation}
 And finally, from combining inequalities \ref{lostDenom} and \ref{linQuad},
 we get the bound:
@@ -418,28 +449,26 @@ and $\delta_q$.
 \end{lemma}
 \begin{proof}
 We show it from the definition of $L$ and convexity:
-\begin{equation*} 
-\begin{split}
-& ||\alpha\Delta_{s1}+(1-\alpha)\Delta_{s2} -
-p_0(\alpha\delta_{p1}+(1-\alpha)\delta_{p2})^T - \\
-& (\alpha\delta_{p1}+(1-\alpha)\delta_{p2})p_0^T -
-q_0(\alpha\delta_{q1}+(1-\alpha)\delta_{q2})^T \\
-& - (\alpha\delta_{q1}+(1-\alpha)\delta_{q2})q_0^T || \\
-= & ||\alpha(\Delta_{s1} - p_0\delta_{p1}^T - \delta_{p1}p_0^T -
-q_0\delta_{q1}^T - \delta_{q1}q_0^T) \\
-& + (1-\alpha)\Delta_{s2} - p_0\delta_{p2}^T - \delta_{p2}p_0^T -
-q_0\delta_{q2}^T - \delta_{q2}q_0^T)|| \\
-\leq & \alpha||\Delta_{s1} - p_0\delta_{p1}^T - \delta_{p1}p_0^T -
-q_0\delta_{q1}^T - \delta_{q1}q_0^T|| \\
-& + (1-\alpha)||\Delta_{s2} - p_0\delta_{p2}^T - \delta_{p2}p_0^T -
-q_0\delta_{q2}^T - \delta_{q2}q_0^T||
-\end{split}
-\end{equation*}
+\begin{alignat*} {2}
+& && ||\alpha\Delta_{s1}+(1-\alpha)\Delta_{s2} \\
+& && - p_0(\alpha\delta_{p1}+(1-\alpha)\delta_{p2})^T \\
+& && - (\alpha\delta_{p1}+(1-\alpha)\delta_{p2})p_0^T \\
+& && - q_0(\alpha\delta_{q1}+(1-\alpha)\delta_{q2})^T \\
+& && - (\alpha\delta_{q1}+(1-\alpha)\delta_{q2})q_0^T || \\
+& = && ||\alpha(\Delta_{s1} - p_0\delta_{p1}^T - \delta_{p1}p_0^T \\
+& && - q_0\delta_{q1}^T - \delta_{q1}q_0^T) \\
+& && + (1-\alpha)\Delta_{s2} - p_0\delta_{p2}^T - \delta_{p2}p_0^T \\
+& && - q_0\delta_{q2}^T - \delta_{q2}q_0^T)|| \\
+& \leq && \alpha||\Delta_{s1} - p_0\delta_{p1}^T - \delta_{p1}p_0^T \\
+& && - q_0\delta_{q1}^T - \delta_{q1}q_0^T|| \\
+& && + (1-\alpha)||\Delta_{s2} - p_0\delta_{p2}^T - \delta_{p2}p_0^T \\
+& && - q_0\delta_{q2}^T - \delta_{q2}q_0^T||
+\end{alignat*}
 \end{proof}
 
 We recall that:
 \begin{equation*} 
-M:=\delta_p\delta_p^T + \delta_q\delta_q^T
+M:= - \delta_p\delta_p^T - \delta_q\delta_q^T
 \end{equation*}
 \begin{lemma} \label{M}
 $||B_0^{-1}M||$ is convex in $\delta_p$
@@ -451,17 +480,21 @@ and $\delta_q$.
 \delta_{q1}\delta_{q1}^T]|| \\
 & && + (1-\alpha)||B_0^{-1}[\delta_{p2}\delta_{p2}^T +
 \delta_{q2}\delta_{q2}^T]|| \\
-& && - ||B_0^{-1}[(\alpha\delta_{p1}+(1-\alpha)\delta_{p2})(\alpha\delta_{p1} +
- (1-\alpha)\delta_{p2})^T  \\
-& &&+ (\alpha\delta_{q1}+(1-\alpha)\delta_{q2})(\alpha\delta_{q1} +
- (1-\alpha)\delta_{q2})^T]||  
+& && - ||B_0^{-1}[(\alpha\delta_{p1}+(1-\alpha)\delta_{p2}) \\
+& && (\alpha\delta_{p1} + (1-\alpha)\delta_{p2})^T  \\
+& && + (\alpha\delta_{q1}+(1-\alpha)\delta_{q2}) \\
+& && (\alpha\delta_{q1} + (1-\alpha)\delta_{q2})^T]||  
 \end{alignat*}
 We would like to prove that $0 \leq F$:
-\begin{alignat*}{2}
-& F=  && \alpha||B_0^{-1}[\delta_{p1}\delta_{p1}^T + \delta_{q1}\delta_{q1}^T]|| \\
-& && + (1-\alpha)||B_0^{-1}[\delta_{p2}\delta_{p2}^T + \delta_{q2}\delta_{q2}^T]|| \\
-& && - ||B_0^{-1}[(\alpha\delta_{p1}+(1-\alpha)\delta_{p2})(\alpha\delta_{p1} +  (1-\alpha)\delta_{p2})^T  \\
-& && + (\alpha\delta_{q1}+(1-\alpha)\delta_{q2})(\alpha\delta_{q1} +  (1-\alpha)\delta_{q2})^T]||  \\
+\begin{alignat*}{3}
+& F=  && &&\alpha||B_0^{-1}[\delta_{p1}\delta_{p1}^T +
+\delta_{q1}\delta_{q1}^T]|| \\
+& && + &&(1-\alpha)||B_0^{-1}[\delta_{p2}\delta_{p2}^T +
+\delta_{q2}\delta_{q2}^T]|| \\
+& && - && ||B_0^{-1}[(\alpha\delta_{p1}+(1-\alpha)\delta_{p2}) \\
+& && &&(\alpha\delta_{p1} + (1-\alpha)\delta_{p2})^T  \\
+& && + && (\alpha\delta_{q1}+(1-\alpha)\delta_{q2})(\alpha\delta_{q1} \\
+& && + && (1-\alpha)\delta_{q2})^T]||  \\
 % & = && \alpha||B_0^{-1}[\delta_{p1}\delta_{p1}^T + \delta_{q1}\delta_{q1}^T]|| \\
 % & && + (1-\alpha)||B_0^{-1}[\delta_{p2}\delta_{p2}^T +
 % \delta_{q2}\delta_{q2}^T]|| \\
@@ -469,51 +502,54 @@ We would like to prove that $0 \leq F$:
 % - (1-\alpha)^2(\delta_{p2}\delta_{p2}^T + \delta_{q2}\delta_{q2}^T) \\
 % & && + \alpha(1-\alpha)(\delta_{p1}\delta_{p2}^T+\delta_{p2}\delta_{p1}^T
 % +\delta_{q1}\delta_{q2}^T+\delta_{q2}\delta_{q1}^T) || \\
-& \leq && \alpha||B_0^{-1}[\delta_{p1}\delta_{p1}^T +
-\delta_{q1}\delta_{q1}^T]|| \\
-& && + (1-\alpha)||B_0^{-1}[\delta_{p2}\delta_{p2}^T +
+& \leq && && \alpha||B_0^{-1}[\delta_{p1}\delta_{p1}^T +
+\delta_{q1}\delta_{q1}^T]||  \\
+& && + && (1-\alpha)||B_0^{-1}[\delta_{p2}\delta_{p2}^T +
 \delta_{q2}\delta_{q2}^T]|| \\
-& && - || \alpha^2(\delta_{p1}\delta_{p1}^T + \delta_{q1}\delta_{q1}^T) 
-- (1-\alpha)^2(\delta_{p2}\delta_{p2}^T + \delta_{q2}\delta_{q2}^T) \\
-& && + \alpha(1-\alpha)(\delta_{p1}\delta_{p2}^T+\delta_{p2}\delta_{p1}^T
-+\delta_{q1}\delta_{q2}^T+\delta_{q2}\delta_{q1}^T) || \\
-& = && \alpha(1-\alpha)[||B_0^{-1}(\delta_{p1}\delta_{p1}^T +
-\delta_{q1}\delta_{q1}^T)||\\
-& && +||B_0^{-1}(\delta_{p2}\delta_{p2}^T + \delta_{q2}\delta_{q2}^T)|| \\
-& && -||B_0^{-1}(\delta_{p1}\delta_{p2}^T+\delta_{p2}\delta_{p1}^T
-+\delta_{q1}\delta_{q2}^T+\delta_{q2}\delta_{q1}^T)||
+& && - && || \alpha^2(\delta_{p1}\delta_{p1}^T + \delta_{q1}\delta_{q1}^T) \\
+& && - && (1-\alpha)^2(\delta_{p2}\delta_{p2}^T + \delta_{q2}\delta_{q2}^T) \\
+& && + && \alpha(1-\alpha)(\delta_{p1}\delta_{p2}^T+\delta_{p2}\delta_{p1}^T \\
+& && + && \delta_{q1}\delta_{q2}^T+\delta_{q2}\delta_{q1}^T) || \\
+& = && && \alpha(1-\alpha)[||B_0^{-1}(\delta_{p1}\delta_{p1}^T \\
+& && + && \delta_{q1}\delta_{q1}^T)||\\
+& && + && ||B_0^{-1}(\delta_{p2}\delta_{p2}^T + \delta_{q2}\delta_{q2}^T)|| \\
+& && - && ||B_0^{-1}(\delta_{p1}\delta_{p2}^T+\delta_{p2}\delta_{p1}^T \\
+& && + && \delta_{q1}\delta_{q2}^T+\delta_{q2}\delta_{q1}^T)||
 \end{alignat*}
 $\alpha(1-\alpha)$ is a positive scalar, thus we should show that
-\begin{alignat*}{1}
-& ||B_0^{-1}(\delta_{p1}\delta_{p1}^T + \delta_{q1}\delta_{q1}^T)|| +
-||B_0^{-1}(\delta_{p2}\delta_{p2}^T + \delta_{q2}\delta_{q2}^T)|| \\
-\leq &  ||B_0^{-1}(\delta_{p1}\delta_{p2}^T+\delta_{p2}\delta_{p1}^T
-+\delta_{q1}\delta_{q2}^T+\delta_{q2}\delta_{q1}^T)||
+\begin{alignat*}{2}
+& && ||B_0^{-1}(\delta_{p1}\delta_{p1}^T + \delta_{q1}\delta_{q1}^T)|| \\
+& && + ||B_0^{-1}(\delta_{p2}\delta_{p2}^T + \delta_{q2}\delta_{q2}^T)|| \\
+& \leq &&  ||B_0^{-1}(\delta_{p1}\delta_{p2}^T+\delta_{p2}\delta_{p1}^T \\
+& && +\delta_{q1}\delta_{q2}^T+\delta_{q2}\delta_{q1}^T)||
 \end{alignat*}
 Let choose $v$ such that
 \begin{alignat*}{2}
-& && v(B_0^{-1}(\delta_{p1}\delta_{p2}^T+\delta_{p2}\delta_{p1}^T +\delta_{q1}\delta_{q2}^T+\delta_{q2}\delta_{q1}^T))v^T \\
-& = &&||B_0^{-1}(\delta_{p1}\delta_{p2}^T+\delta_{p2}\delta_{p1}^T +\delta_{q1}\delta_{q2}^T+\delta_{q2}\delta_{q1}^T)||
+& && v(B_0^{-1}(\delta_{p1}\delta_{p2}^T+\delta_{p2}\delta_{p1}^T\\
+& &&+\delta_{q1}\delta_{q2}^T+\delta_{q2}\delta_{q1}^T))v^T \\
+& = &&||B_0^{-1}(\delta_{p1}\delta_{p2}^T+\delta_{p2}\delta_{p1}^T\\
+& && + \delta_{q1}\delta_{q2}^T+\delta_{q2}\delta_{q1}^T)||
 \end{alignat*}
 For the same $v$,
-\begin{equation*}
- v(B_0^{-1}(\delta_{p1}\delta_{p1}^T + \delta_{q1}\delta_{q1}^T))v^T
- \leq ||B_0^{-1}(\delta_{p1}\delta_{p1}^T + \delta_{q1}\delta_{q1}^T)||
-\end{equation*}
+\begin{alignat*}{2}
+ & && v(B_0^{-1}(\delta_{p1}\delta_{p1}^T + \delta_{q1}\delta_{q1}^T))v^T \\
+& \leq && ||B_0^{-1}(\delta_{p1}\delta_{p1}^T + \delta_{q1}\delta_{q1}^T)||
+\end{alignat*}
 and
-\begin{equation*}
- v(B_0^{-1}(\delta_{p2}\delta_{p2}^T + \delta_{q2}\delta_{q2}^T))v^T
- \leq ||B_0^{-1}(\delta_{p2}\delta_{p2}^T + \delta_{q2}\delta_{q2}^T)||
-\end{equation*}
+\begin{alignat*}{2}
+ & && v(B_0^{-1}(\delta_{p2}\delta_{p2}^T + \delta_{q2}\delta_{q2}^T))v^T \\
+ & \leq && ||B_0^{-1}(\delta_{p2}\delta_{p2}^T + \delta_{q2}\delta_{q2}^T)||
+\end{alignat*}
 Putting all together, we get,
 \begin{alignat*}{2}
-& &&||B_0^{-1}(\delta_{p1}\delta_{p2}^T+\delta_{p2}\delta_{p1}^T
-+\delta_{q1}\delta_{q2}^T+\delta_{q2}\delta_{q1}^T)|| \\
-& = && v(B_0^{-1}(\delta_{p1}\delta_{p2}^T+\delta_{p2}\delta_{p1}^T +\delta_{q1}\delta_{q2}^T+\delta_{q2}\delta_{q1}^T))v^T \\
-& = && v(B_0^{-1}(\delta_{p1}\delta_{p1}^T + \delta_{q1}\delta_{q1}^T))v^T +
-v(B_0^{-1}(\delta_{p2}\delta_{p2}^T + \delta_{q2}\delta_{q2}^T))v^T \\
-& \leq &&  ||B_0^{-1}(\delta_{p1}\delta_{p1}^T + \delta_{q1}\delta_{q1}^T)|| +
-||B_0^{-1}(\delta_{p2}\delta_{p2}^T + \delta_{q2}\delta_{q2}^T)||
+& &&||B_0^{-1}(\delta_{p1}\delta_{p2}^T+\delta_{p2}\delta_{p1}^T \\
+& &&+\delta_{q1}\delta_{q2}^T+\delta_{q2}\delta_{q1}^T)|| \\
+& = && v(B_0^{-1}(\delta_{p1}\delta_{p2}^T+\delta_{p2}\delta_{p1}^T\\
+& && +\delta_{q1}\delta_{q2}^T+\delta_{q2}\delta_{q1}^T))v^T\\
+& = && v(B_0^{-1}(\delta_{p1}\delta_{p1}^T + \delta_{q1}\delta_{q1}^T))v^T \\
+& && + v(B_0^{-1}(\delta_{p2}\delta_{p2}^T + \delta_{q2}\delta_{q2}^T))v^T \\
+& \leq &&  ||B_0^{-1}(\delta_{p1}\delta_{p1}^T + \delta_{q1}\delta_{q1}^T)|| \\
+& && + ||B_0^{-1}(\delta_{p2}\delta_{p2}^T + \delta_{q2}\delta_{q2}^T)||
 \end{alignat*}
 %\end{equation*}
 % \begin{alignat*}{3}
